<resources>
    <string name="app_name">Counter</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="zero">0</string>
    <string name="plus1">+1</string>
    <string name="plus2">+2</string>
    <string name="plus3">+3</string>
    <string name="add_points_placeholder">add points</string>
    <string name="insert_number">You have to insert some number!</string>
    <string name="anymore_points">Cannot add anymore points!</string>
    <string name="insert_less">Insert less than %1$d!</string>
</resources>
