<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="cz.uhk.counter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/counterA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/teamA"
                android:textSize="45sp" />

            <Button
                android:id="@+id/buttonA3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/plus3"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonA2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/plus2"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonA1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/plus1"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/inputPointsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/add_points_placeholder"
                android:inputType="number"
                android:textColor="@color/teamA"
                android:textColorHint="@color/teamA" />

            <Button
                android:id="@+id/addA"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/add"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/counterB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/teamB"
                android:textSize="45sp" />

            <Button
                android:id="@+id/buttonB3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/plus3"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonB2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/plus2"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonB1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/plus1"
                android:textColor="@android:color/white" />


            <EditText
                android:id="@+id/inputPointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/add_points_placeholder"
                android:inputType="number"
                android:textColor="@color/teamB"
                android:textColorHint="@color/teamB" />

            <Button
                android:id="@+id/addB"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/add"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/reset"
        android:textColor="@android:color/white" />
</LinearLayout>
